2013-04-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-00
        * Update Doxygen documentation and some code cleanup.

2012-12-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-12
        * Skip simulation checks for events with ROB errors.
        * (-00-13-11 jhofmann: adding JO to control usage of CaloQuality cut)

2012-11-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-10
        * Reduce cpu time of some tools.

2012-10-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-09
        * Fix gcc46 compiler warnings.

2012-10-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-08
        * Minor update to debug tool.

2012-10-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-07
        * Update jobOptions.

2012-10-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-06
        * Add some debugging tools.

2012-10-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-05
        * Fix bug in last 10 lumiblock global error plot.

2012-09-13  Julia I. Hofmann <jhofmann@kip.uni-heidelberg.de>
        * Tag as TrigT1CaloMonitoring-00-13-04
        * Extending the finetime monitoring to read in reference values.

2012-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-03
        * Record rejected event numbers.

2012-09-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-02
        * Update JobOptions.

2012-09-04  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-01
        * Forgot const.

2012-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-00
        * Update corrupt events veto.